<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/categorias_buttons_background"
    android:transitionName="sharedBackgroundTransition"
    tools:context=".LoginUserActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"

        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/stars" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"

        android:background="@drawable/login_arc"


        android:orientation="vertical"


        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView17"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="82dp"

            android:textColor="?attr/titles"

            android:text="Bienvenido a \nBrainyBattles"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginTop="-70dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="62dp"
            android:layout_marginStart="20dp"

            android:fontFamily="@font/balsamiq_sans"
            android:text="Datos incorrectos"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"

            android:visibility="gone"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@mipmap/without_photo_icon"
            android:drawablePadding="16dp"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:padding="8dp"
            android:textColorHint="#756c6c"
            android:translationY="-60dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@mipmap/email"
            android:drawablePadding="16dp"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColorHint="#756c6c"
            android:translationY="-60dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@mipmap/password"
            android:drawablePadding="16dp"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColorHint="#756c6c"
            android:translationY="-60dp" />

        <Button
            android:id="@+id/loginregisterbutton"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/categorias_buttons_background"
            android:gravity="center"
            android:text="@string/login"


            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="sharedButtonTransition"


            app:backgroundTint="@null" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="220dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:gravity="center"
            android:text="¿Aún no tienes una cuenta? \n Regístrate aquí" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>