<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background"
    android:transitionName="sharedBackgroundTransition"
    tools:context=".RegisterUserActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:translationY="-270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/figures" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/register"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="600dp"

            android:layout_margin="10dp"


            android:layout_gravity="bottom"
            android:background="@drawable/login_arc"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="82dp"
                android:text="Esto es...\nBrainyBattles"
                android:textColor="?attr/titles"
                android:textSize="40sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-70dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="62dp"


                android:text="Regístrate con nosotros para jugar BrainyBattles"
                android:textColor="?attr/titles"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"

                android:background="@drawable/edittext_background"
                android:drawableStart="@mipmap/name"
                android:drawablePadding="16dp"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="#756c6c"
                android:translationY="-60dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"


                android:background="@drawable/edittext_background"
                android:drawableStart="@mipmap/email"
                android:drawablePadding="16dp"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="#756c6c"
                android:translationY="-60dp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="300dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"


                android:background="@drawable/edittext_background"
                android:drawableStart="@mipmap/password"
                android:drawablePadding="16dp"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="#756c6c"
                android:translationY="-60dp" />

            <TextView
                android:id="@+id/loginregisterbutton"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/navy_gradient"
                android:gravity="center"


                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"

                android:transitionName="sharedButtonTransition" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="80dp"
                android:gravity="center"


                android:text="¿Ya tienes una cuenta? Inicia sesión aquí" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>