<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileUser">

    <com.airbnb.lottie.LottieAnimationView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"

        app:lottie_rawRes="@raw/hexagonos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="20dp"
        android:translationY="120dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/View9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"


                    android:adjustViewBounds="true"
                    android:background="@drawable/arc_2"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/imageView10"
                    app:layout_constraintBottom_toBottomOf="@+id/View9"
                    app:layout_constraintEnd_toEndOf="@+id/View9"
                    app:layout_constraintStart_toStartOf="@+id/View9"
                    app:layout_constraintTop_toBottomOf="@+id/View9"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/profile" />

                <ImageView
                    android:id="@+id/imageView11"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                    app:layout_constraintEnd_toEndOf="@+id/imageView10"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    android:src="@mipmap/lapiz" />

                <EditText
                    android:id="@+id/username"
                    app:layout_constraintEnd_toEndOf="@+id/imageView10"
                    app:layout_constraintStart_toStartOf="@+id/imageView10"
                    app:layout_constraintTop_toBottomOf="@+id/imageView10"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"

                    android:text="Nombre de usuario"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/change_username"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="@+id/username"

                    app:layout_constraintStart_toEndOf="@+id/username"
                    app:layout_constraintTop_toTopOf="@+id/username"
                    android:layout_width="48dp"

                    android:layout_height="48dp"
                    android:layout_margin="5dp"


                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="264dp"
                    android:background="@mipmap/lapizx2"
                    android:contentDescription="@string/setting" />


                <EditText
                    android:id="@+id/email"
                    style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
                    app:layout_constraintBottom_toBottomOf="@+id/username"
                    app:layout_constraintEnd_toEndOf="@+id/username"
                    app:layout_constraintStart_toStartOf="@+id/username"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:text="Correo electrónico"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/profilebtn_background"
                        android:drawableStart="@mipmap/ic_9"
                        android:drawablePadding="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/setting"
                        android:textAlignment="viewStart" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"


                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"


                        android:background="@drawable/profilebtn_background"
                        android:drawableStart="@mipmap/alias"

                        android:drawablePadding="12dp"


                        android:elevation="200dp"
                        android:padding="10dp"
                        android:paddingStart="20dp"


                        android:text="@string/nickname_change"
                        android:textAlignment="viewStart" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"


                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"


                        android:background="@drawable/profilebtn_background"
                        android:backgroundTint="@color/darkred"

                        android:drawableStart="@mipmap/warning"
                        android:drawablePadding="14dp"


                        android:elevation="200dp"
                        android:padding="10dp"
                        android:paddingStart="17dp"

                        android:text="@string/delete"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>